--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,2 @@
- Header add Access-Control-Allow-Origin "*"
- Header add Access-Control-Allow-Methods: "GET"
+ Header set Access-Control-Allow-Origin "*"
+ Header set Access-Control-Allow-Methods: "GET"
