--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,11 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
 title: Ontario Model United Nations
 email: omun@ucc.on.ca
 description: > # this means to ignore newlines until "baseurl:"
   Ontario Model United Nations is a student-run Model United Nations simulation held at Upper Canada College. On the OMUN website, you can discover what committees are available, general conference information, and register as a delegate or school!
-baseurl: "/omun" # the subpath of your site, e.g. /blog
-url: "http://matthewwang.me" # the base hostname & protocol for your site
+baseurl: "/omun"
+url: "http://matthewwang.me"
+
+# Social Media Accounts
 facebook: "https://www.facebook.com/OntarioModelUnitedNations"
 twitter: "https://twitter.com/OntarioMUN"
 instagram: "https://www.instagram.com/ontariomodelun/"
