--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,17 @@
 title: Ontario Model United Nations
 email: omun@ucc.on.ca
-description: > # this means to ignore newlines until "baseurl:"
+description: >
   Ontario Model United Nations is a student-run Model United Nations simulation held at Upper Canada College. On the OMUN website, you can discover what committees are available, general conference information, and register as a delegate or school!
 baseurl: "/omun"
 url: "http://matthewwang.me"
+docurl: "/omun/docs"
 
 # Social Media Accounts
 facebook: "https://www.facebook.com/OntarioModelUnitedNations"
 twitter: "https://twitter.com/OntarioMUN"
 instagram: "https://www.instagram.com/ontariomodelun/"
+github: "https://github.com/malsf21/omun.ca"
+
 
 # Build settings
 markdown: kramdown
@@ -18,3 +21,6 @@ collections:
   committees:
     output: true
     layout: committee
+  docs:
+    output: true
+    layout: doc
