--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ github: "https://github.com/malsf21/omun.ca"
 
 # Build settings
 markdown: kramdown
+exclude: [vendor]
 
 # Collections
 collections:
