--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: ruby
 rvm:
 - 2.1
 
-script: jekyll build
+install:
+  - gem install jekyll
+script:
+  - jekyll build
 
 branches:
   only:
