--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,3 @@
- Header set Access-Control-Allow-Origin "*"
- Header set Access-Control-Allow-Methods: "GET"
+Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Methods: "GET"
+ErrorDocument 404 /404.html
