small edits to prepare for 1.0.1
edits site base urls, changes up homepage styling, fixes a few typos

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Ontario Model United Nations
 description: >
   Ontario Model United Nations is a student-run Model United Nations simulation held at Upper Canada College. On the OMUN website, you can discover what committees are available, general conference information, and register as a delegate or school!
-baseurl: "/omun"
-url: "http://matthewwang.me"
-docurl: "/omun/docs"
+baseurl: ""
+url: "http://omun.ca"
+docurl: "/docs"
 
 # Build settings
 markdown: kramdown
