fixes small typo on faq

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -21,4 +21,4 @@ committeetypes:
 committeesizes:
   type: committee
   question: What are the sizes of committees at OMUN?
-  answer: "Each individual size will have a different committee size, which you can find on our committee page."
+  answer: "Each individual committee will have a different committee size, which you can find on our committee page."
