--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -37,3 +37,8 @@ committeeassign:
   type: committee
   question: What delegations are in each committee?
   answer: "You can find our country matrix [here](/files/country_matrix.pdf)."
+
+committeepps:
+  type: committee
+  question: How do Position Papers work at OMUN?
+  answer: "OMUN will be making position papers mandatory this year for all delegates to receive committee awards. They will be marked, counting for 10 points out of 60 towards committee awards. Delegates should target their papers to be around 2 pages, double spaced. More detailed guidelines and research help will be posted in the Delegate Center in October. Position Papers will be due March 21st."
