--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -1,7 +1,7 @@
 sg1:
   role: "Secretary General"
-  name: "Conrad Mahoney"
-  photo: "cmahoney.jpg"
+  name: "Conrad Mahony"
+  photo: "cmahony.jpg"
 sg2:
   role: "Secretary General"
   name: "Aryan Paliwal"
