adds Jamie's picture

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -48,6 +48,7 @@ usgspecialized1:
 usgspecialized2:
   role: "USG Specialized Agencies"
   name: "Jamie Oneschuk"
+  photo: "joneschuck.png"
 dusgadmin:
   role: "Deputy USG Administration"
   name: "Campbell MacKinnon"
