--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -67,3 +67,6 @@ dusgcommittee:
 dusgspecialized:
   role: "Deputy USG Specialized Agencies"
   name: "Evan Enns"
+dusgexternal:
+  role: "Deputy USG External Affairs"
+  name: "Gaurav Dogra"
