adds uche to website

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -72,3 +72,6 @@ dusgexternal:
   role: "Deputy USG External Affairs"
   name: "Gaurav Dogra"
   photo: "gdogra.jpg"
+ddaffairs:
+  role: "Director of Delegate Affairs"
+  name: "Uche Ochuba"
