adds rules of procedure

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -47,3 +47,6 @@ committees:
   pps:
     question: How do Position Papers work at OMUN?
     answer: "OMUN will be making position papers mandatory this year for all delegates to receive committee awards. They will be marked, counting for 10 points out of 60 towards committee awards. Delegates should target their papers to be one page, single spaced, per topic. Position Papers will be due April 6th. Find out more information at the Delegate Center."
+  rops:
+    question: Is there a Rules of Procedure?
+    answer: "You can find our Rules of Procedure [here](/files/rules_of_procedure.pdf)."
